--- a/func/requirements.txt
+++ b/func/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://backend:dc222fa6-452f-4253-a2fd-a52e7ba2e7e9@nexus.sigame.com.br/repository/pypi/simple
 asgiref==3.5.2
 boto3==1.21.21
 flask==2.2.2
@@ -6,4 +7,3 @@ httpx==0.23.0
 khonshu==0.1.1
 persephone-client==2.0.0
 pytz==2022.4
-strenum==0.4.8
