feat: versioning fission deploy

--- a/specs-dev/env-acc-suit-quest-update-env.yaml
+++ b/specs-dev/env-acc-suit-quest-update-env.yaml
@@ -2,27 +2,24 @@ apiVersion: fission.io/v1
 kind: Environment
 metadata:
   creationTimestamp: null
-  name: suita-profile-update-env
+  name: acc-suit-quest-update-env
   namespace: default
 spec:
   builder:
-    command: build
     container:
       name: ""
       resources: {}
-    image: nexus.sigame.com.br/fission-builder-3.8:0.0.1
-  imagepullsecret: "nexus-v3"
+  imagepullsecret: nexus-v3
   keeparchive: false
-  poolsize: 3
   resources: {}
   runtime:
     container:
       name: ""
       resources: {}
-    image: nexus.sigame.com.br/fission-async:0.1.9
+    image: nexus.sigame.com.br/fission-account-suit-quest-update:0.1.2
     podspec:
       containers:
-        - name: suita-profile-update-env
+        - name: acc-suit-quest-update-env
           env:
             - name: ROOT_LOG_LEVEL
               value: "INFO"
