--- a/specs-dev/function-acc-suit-quest-update-fn.yaml
+++ b/specs-dev/function-acc-suit-quest-update-fn.yaml
@@ -1,35 +1,35 @@
 include:
-- ./func/*
+- fission.py
 kind: ArchiveUploadSpec
-name: func-Ud0d
+name: fission-py-aTne
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: suita-profile-update-fn-162f61d6-6334-4396-9f87-d1915cb160e9
+  name: acc-suit-quest-update-fn-2214efde-3fb1-4d9c-86c3-f081f41c37c1
   namespace: default
 spec:
   deployment:
     checksum: {}
+    type: url
+    url: archive://fission-py-aTne
   environment:
-    name: suita-profile-update-env
+    name: acc-suit-quest-update-env
     namespace: default
   source:
     checksum: {}
-    type: url
-    url: archive://func-Ud0d
 status:
-  buildstatus: pending
-  lastUpdateTimestamp: "2022-10-19T21:27:02Z"
+  buildstatus: none
+  lastUpdateTimestamp: "2023-01-06T16:48:05Z"
 
 ---
 apiVersion: fission.io/v1
 kind: Function
 metadata:
   creationTimestamp: null
-  name: suita-profile-update-fn
+  name: acc-suit-quest-update-fn
   namespace: default
 spec:
   InvokeStrategy:
@@ -38,18 +38,24 @@ spec:
       MaxScale: 3
       MinScale: 1
       SpecializationTimeout: 120
-      TargetCPUPercent: 80
+      TargetCPUPercent: 0
+      hpaMetrics:
+      - resource:
+          name: cpu
+          target:
+            averageUtilization: 80
+            type: Utilization
+        type: Resource
     StrategyType: execution
   concurrency: 500
   environment:
-    name: suita-profile-update-env
+    name: acc-suit-quest-update-env
     namespace: default
   functionTimeout: 60
   idletimeout: 120
   package:
-    functionName: main.update_suitability_profile
     packageref:
-      name: suita-profile-update-fn-162f61d6-6334-4396-9f87-d1915cb160e9
+      name: acc-suit-quest-update-fn-2214efde-3fb1-4d9c-86c3-f081f41c37c1
       namespace: default
   requestsPerPod: 10000
   resources: {}
