--- a/specs-uat/route-acc-suit-quest-update-rt.yaml
+++ b/specs-uat/route-acc-suit-quest-update-rt.yaml
@@ -2,13 +2,13 @@ apiVersion: fission.io/v1
 kind: HTTPTrigger
 metadata:
   creationTimestamp: null
-  name: suita-profile-update-rt
+  name: acc-suit-quest-update-rt
   namespace: default
 spec:
   createingress: false
   functionref:
     functionweights: null
-    name: suita-profile-update-fn
+    name: acc-suit-quest-update-fn
     type: name
   host: ""
   ingressconfig:
