--- a/specs-uat-old-new-deploy/env-acc-suit-quest-update-env.yaml
+++ b/specs-uat-old-new-deploy/env-acc-suit-quest-update-env.yaml
@@ -5,17 +5,17 @@ metadata:
   name: acc-suit-quest-update-env
   namespace: default
 spec:
+  builder:
+    container:
+      name: ""
+      resources: {}
   imagepullsecret: nexus-v3
   keeparchive: false
-  poolsize: 2
-  resources:
-    requests:
-      cpu: 128m
-      memory: 128Mi
-    limits:
-      cpu: 256m
-      memory: 256Mi
+  resources: {}
   runtime:
+    container:
+      name: ""
+      resources: {}
     image: nexus.sigame.com.br/fission-account-suit-quest-update:0.1.2
     podspec:
       containers:
@@ -34,7 +34,7 @@ spec:
             - name: PERSEPHONE_KAFKA_BROKERS
               value: "cluster-kafka-bootstrap.kafka.svc.cluster.local:9092"
             - name: MONGO_CONNECTION_URL
-              value: "mongodb://jormungandr:LIwn1In32LdowPqma@172.30.10.75:41000/?authSource=admin&replicaSet=rslionx&readPreference=secondary"
+              value: "mongodb://jormungandr:MMhsdanNNds32Malmnwqyrte@172.30.18.223:41000,172.30.19.240:41000,172.30.19.71:41000/?authSource=admin&replicaSet=rslionx&readPreference=primary"
             - name: MONGODB_DATABASE_NAME
               value: "lionx"
             - name: MONGODB_USER_COLLECTION
@@ -48,17 +48,17 @@ spec:
             - name: HEIMDALL_REGION_NAME
               value: "sa-east-1"
             - name: HEIMDALL_BUCKET_NAME_KEY
-              value: "auth-gateway-keys-dev"
+              value: "auth-gateway-keys-uat"
             - name: HEIMDALL_JWT_REQUIRED_FIELDS
               value: "[]"
             - name: HEIMDALL_REDIS_URL
-              value: "redis://heimdal:LLOnmUUffhaUHnewIz@172.30.11.235:6379?db=1"
+              value: "redis://heimdal:FBJAnjkqw21yjewkDSA@172.30.19.183:6379?db=1"
             - name: ONBOARDING_STEPS_BR_URL
               value: "http://router.fission.svc.cluster.local/onboarding/steps_br"
             - name: MONGODB_SUITABILITY_COLLECTION
               value: "suitability"
             - name: MNEMOSINE_REDIS_HOST
-              value: "redis://jormungandr:oUjqwnmdDSA391dja@172.30.11.235:6379"
+              value: "redis://jormungandr:Mdn45oodsanPOhbrewbDS@172.30.19.183:6379"
             - name: REDIS_SUITABILITY_KEY
               value: "suitability_questions"
             - name: REDIS_TIME_TO_LIVE
@@ -85,5 +85,4 @@ spec:
               value: "http://router.fission.svc.cluster.local/security/deviceid/deviceinfo/decrypt"
             - name: DEFAULT_PRECISION_VALUE
               value: 1
-  terminationGracePeriod: 3
   version: 3
